--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "styled-components": "^4.3.2",
+    "styled-normalize": "^8.0.6",
     "url-loader": "^2.0.1",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
